@@ -1,4 +1,4 @@
 
 module Cerealize
-  VERSION = '0.8.3'
+  VERSION = '0.8.4'
 end
